log/build_2023-11-16_06-05-46/mypkg/stderr.log
  File "/home/kouta/ros2_ws/install/mypkg/lib/python3.8/site-packages/mypkg/talker.py", line 9
    def cb()
           ^
SyntaxError: invalid syntax

